--- a/install
+++ b/install
@@ -3,3 +3,4 @@ sudo apt-get upgrade
 sudo apt-get install nodejs
 sudo apt-get install npm
 sudo npm install -g nodeOnPiOnABus
+sudo npm install pm2 -g
